# MFT-MCP-HTTPX-Agent

./: # HFCL Agent Service API Reference.md  .dockerignore  .dumperignore  .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_CURL_CALLS.md  API_REFERENCE.md  BLACK_FORMATTING_SETUP.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GIT_WORKFLOW.md  HFCLAPIsNew.py  HFCLAPIsWithoutAuth.py  HFCL_Auth_APIs.py  MOCKAI_V2_BROWSE_REPORT.md  Makefile  RAGAS_CHANGELOG.md  README.md  ROUTER_PERFORMANCE_FIX.md  SECURITY_DEPLOYMENT_CHECKLIST.md  WHY_CHATBOT_UI_AND_ADMIN_CONSOLE_NOT_ACCEPTED.md  _context.md  agent_config.py  agent_llm.py  agent_mcp.py  agent_utils.py  backend_postman_collection.json  backend_postman_collection_deduped.json  bak  clientNew.py  compose.yaml  debug_auth_flow.py  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.uat.yml  (+48 more)
backend/: # HFCL Agent Service API Reference.md  .dockerignore  .dumperignore  .gitignore  .pre-commit-config.yaml  API_CURL_CALLS.md  API_REFERENCE.md  Dockerfile  FORMATTING.md  Makefile  PRODUCTION_ENDPOINT_TEST_REPORT.md  RATE_LIMITING.md  RATE_LIMITING_IMPLEMENTATION.md  README.md  SETUP_COMPLETE.md  _main_context.md  docker-compose.local.yml  docker-compose.yml  files_dump_HFCL-FastMCP-server-httpx-tools_20260211_192654.txt  files_dump_backend_20260219_204700.txt  files_dump_backend_20260220_000934.txt  gunicorn.conf.py  neo4j_eval_schema.cypher  openrouter_reasoning_validation.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
backend/.github/: CONTRIBUTING.md
backend/.github/workflows/: _context.md  code-quality.yml
backend/cloudflared/: _context.md
backend/data/geoip/: _context.md
backend/infra/monitoring/: alertmanager.yml
backend/infra/monitoring/grafana/dashboards/: _context.md  security-overview.json
backend/infra/monitoring/prometheus/: _context.md  alerts.yml  prometheus.yml
backend/infra/nginx/: _context.md  nginx-tls13.conf
backend/infra/sql/: 02_eval_schema.sql  03_admin_users.sql  04_shadow_judge_status.sql  05_admin_enrollment_tokens.sql  _context.md
backend/scripts/: __init__.py  _context.md  backfill_inline_guard_fields.py  backfill_non_llm_metrics.py  backfill_question_categories.py  backfill_ragas_metrics.py  backfill_shadow_judge_mirror.sql  backfill_trace_embeddings.py  db_migrate.sh  enroll_super_admin.py  generate_context_docs.py  ingest_faq.py  ingest_grounding.py  localsetup.sh  rebuild_eval_results_collection.py  update_free_geoip.sh
backend/src/: main_agent.py  main_mcp.py
backend/src/agent_service/: utils.py
backend/src/agent_service/api/: admin.py  admin_analytics.py  admin_auth.py  admin_utils.py  eval_ingest.py  eval_live.py  eval_read.py  feedback.py  graphql.py  shared_message_utils.py
backend/src/agent_service/api/admin_analytics/: __init__.py  category_map.py  conversations.py  guardrails.py  overview.py  repo.py  traces.py  (+1 more)
backend/src/agent_service/core/: app_factory.py  config.py  cost.py  event_bus.py  follow_ups.py  graph_utils.py  http_client.py  pricing.py  prompts.py  prompts.yaml  rate_limiter.py  rate_limiter_manager.py  recursive_rag_graph.py  resource_resolver.py  schemas.py  session_cost.py  session_utils.py  streaming_utils.py  utils.py
backend/src/agent_service/data/: _context.md  config_manager.py
backend/src/agent_service/eval_store/: _bg.py  _context.md  embedder.py  judge.py  neo4j_store.py  pg_store.py  ragas_judge.py  shadow_queue.py  status.py
backend/src/agent_service/faqs/: _context.md  pdf_parser.py
backend/src/agent_service/features/: _context.md  answerability.py  faq_classifier.py  faq_pdf_parser.py  follow_up.py  kb_first.py  kb_milvus_store.py  knowledge_base_repo.py  knowledge_base_service.py  nbfc_router.py  prototypes_nbfc.py  runtime_trace_store.py  shadow_eval.py
backend/src/agent_service/llm/: _context.md  capabilities.py  catalog.py  client.py  groq_rotator.py
backend/src/agent_service/router/: _context.md  nbfc_taxonomy.py  prototypes_nbfc.py  schemas.py  service.py  worker.py
backend/src/agent_service/security/: __init__.py  _context.md  admin_crypto.py  admin_jwt.py  admin_totp.py  geoip_resolver.py  inline_guard.py  metrics.py  middleware.py  password_hash.py  postgres_pool.py  runtime.py  session_security.py  tor_block.py  tor_exit_nodes.py
backend/src/agent_service/tools/: _context.md  graph_rag.py  knowledge.py  mcp_manager.py  tool_execution_policy.py
backend/src/agent_service/worker/: shadow_judge_worker.py
backend/src/common/: _context.md  memgraph_mgr.py  milvus_mgr.py  neo4j_mgr.py
backend/src/mcp_service/: _context.md  auth_api.py  auth_decorators.py  config.py  core_api.py  description_utils.py  kb_search.py  output_pii_scanner.py  ownership.py  server.py  session_context.py  session_store.py  tool_descriptions.yaml
backend/tests/: _context.md  conftest.py  test_admin_auth_dependencies.py  test_admin_auth_endpoints.py  test_admin_conversations_contract.py  test_admin_crypto.py  test_admin_enrollment_routes.py  test_admin_faqs_contract.py  test_admin_guardrails_analytics.py  test_admin_jwt.py  test_admin_session_traces_filter.py  test_admin_totp.py  test_admin_traces_category_filter.py  test_admin_users_repo.py  test_admin_users_routes.py  test_agent_query_contract.py  test_agent_stream_events.py  test_agent_stream_guardrail.py  test_agent_stream_router_serial.py  test_agent_stream_side_effect_dedupe.py  test_agent_stream_terminal_contract.py  test_agent_utils.py  test_app_factory_eval_schema.py  test_auth_decorator.py  test_backfill_inline_guard_fields.py  test_backfill_question_categories.py  test_bugfix_validations.py  test_config_jwt_algorithm.py  test_cors_config.py  test_eval_collector.py  test_eval_embedder.py  test_eval_question_categories.py  test_eval_read_vector_search_results.py  test_eval_status_endpoint.py  test_eval_status_public_router.py  test_faq_classifier.py  test_groq_rotator.py  test_inline_guard.py  test_inline_guard_corpus.py  test_kb_tool_name_either.py  (+34 more)
backend/tests/integration/: conftest.py  test_cross_session_attack.py
(+735 files in other folders)
