[project]
name = "mcp-tutorial"
version = "0.1.0"
description = "Enterprise Agent Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "fastmcp>=2.9.0",
    "gunicorn>=21.2.0",
    "httpx[http2]>=0.28.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    # -- Providers --
    "langchain-openai>=0.2.0",
    "langchain-openrouter>=0.0.2",
    "langchain-anthropic>=0.2.0",
    "langchain-groq>=0.2.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "langchain-deepseek>=0.1.0",
    # -- Integrations --
    "langchain-milvus>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    # neo4j driver reused for Memgraph (bolt-compatible)
    "neo4j>=5.0.0",
    # -- Graph --
    "langgraph>=0.2.0",
    "langgraph-checkpoint-redis==0.3.4",
    # -- Utils --
    "mcp>=1.0.0",
    "pdfplumber>=0.11.0",
    "redis>=5.0.0",
    "strawberry-graphql>=0.240.0",
    "toon-format>=0.1.0",
    "uuid-utils",
    "uvicorn[standard]>=0.30.0",
    "prometheus-client>=0.20.0",
    "geoip2>=4.8.0",
    "asyncpg>=0.30.0",
    # -- Evaluation --
    "ragas>=0.4.0,<0.5.0",
    # -- Guardrails --
    "guardrails-ai==0.9.3",
]

[tool.uv.sources]
toon-format = { git = "https://github.com/toon-format/toon-python.git" }

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "pre-commit>=3.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

# =============================================================================
# Code Formatting & Linting (Production Grade)
# =============================================================================

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    # Exclude common directories
    \.git
  | \.venv
  | venv
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | build
  | dist
  | __pycache__
  | \.eggs
  | \.pyc
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
